# podman-mcp-server

./: .gitignore  LICENSE  README.md  go.mod  main.go  pyproject.toml
src/: server.py
src/podman_mcp_server/: __init__.py  __main__.py  server.py
src/podman_mcp_server/api/: __init__.py  artifacts_api.py  containers_api.py  events_api.py  images_api.py  manifests_api.py  networks_api.py  pods_api.py  system_api.py  volumes_api.py
src/podman_mcp_server/utils/: __init__.py  mcp.py  request.py
