[project]
name = "podman-mcp"
version = "0.1.0"
description = "A MCP server for Podman"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

dependencies = [
    "mcp[cli]>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
podman-mcp = "src:main"
