[project]
name = "podman-mcp"
version = "0.1.0"
description = "A MCP server for Podman"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

dependencies = [
    "mcp[cli]>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podman_mcp_server"]

[project.scripts]
podman-mcp = "podman_mcp_server:server.main"
