[project]
name = "podman-mcp"
version = "0.1.0"
description = "A MCP server for Podman"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

dependencies = [
    "mcp[cli]>=1.26.0",
    "requests>=2.32.5",
    "requests-unixsocket>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podman_mcp_server"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[project.scripts]
podman-mcp = "podman_mcp_server:server.main"
